# bonde-iac

./: .gitignore  INFRA_TODO.md  Pulumi.sandbox.yaml  Pulumi.shared.yaml  Pulumi.yaml  __main__.py  pyproject.toml
.github/workflows/: pull_request.yml  push_sandbox.yml
config/caddy/: caddy-sandbox.json
config/sandbox/: api-accounts.yaml  api-activists.yaml  api-data.yaml  api-domains.yaml  api-notifications.yaml  api-payments.yaml  api-rest.yaml  client-accounts.yaml  client-admin.yaml  client-canary.yaml  public.yaml
k6/: ANALISE.md  monitor-hpa-test.sh  test-hpa-scaling.js  test-stress.js
modules/: caddy.py  loadbalancer.py  on_demand.py
modules/apps/: api.py  graphql.py  webservice.py  workflows.py
modules/base/: __init__.py  namespaces.py
modules/ingress/: __init__.py  caddy.py  on_demand.py
sandbox/: __init__.py
shared/: __init__.py  eks_cluster.py  network.py
tools/: envs.py  extract_todos.py  loader.py
