[project]
name = "bonde-iac"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
    "pulumi-awsx>=3.1.0",
    "pulumi-command>=1.1.3",
    "pulumi-eks>=4.0.1",
    "pulumi-kubernetes>=4.24.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
